--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.15.5",
+    "express-jwt": "^5.3.0",
+    "express-session": "^1.15.6",
+    "jsonwebtoken": "^8.1.0",
     "morgan": "~1.9.0",
     "serve-favicon": "~2.4.5",
     "tedious": "^2.1.5"
