--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-session": "^1.15.6",
     "jsonwebtoken": "^8.1.0",
     "morgan": "~1.9.0",
+    "mssql": "^4.1.0",
     "serve-favicon": "~2.4.5",
     "tedious": "^2.1.5"
   }
