--- a/angular/package.json
+++ b/angular/package.json
@@ -23,7 +23,9 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "angular2-jwt": "^0.2.3",
     "core-js": "^2.4.1",
+    "ng2-toastr": "^4.1.2",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
