--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "body-parser": "~1.18.2",
     "chai": "^4.1.2",
     "cookie-parser": "~1.4.3",
+    "cors": "^2.8.4",
     "debug": "~2.6.9",
     "express": "~4.15.5",
     "express-jwt": "^5.3.0",
