--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "chai": "^4.1.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "ent": "^2.2.0",
     "express": "~4.15.5",
     "express-jwt": "^5.3.0",
     "express-session": "^1.15.6",
+    "fs": "0.0.1-security",
     "jsonwebtoken": "^8.1.0",
     "mocha": "^4.0.1",
     "morgan": "~1.9.0",
@@ -22,6 +24,7 @@
     "request": "^2.83.0",
     "serve-favicon": "~2.4.5",
     "should": "^13.1.3",
+    "socket.io": "^2.0.4",
     "tedious": "^2.1.5"
   }
 }
