--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   },
   "dependencies": {
     "async": "^2.6.0",
-    "bcrypt": "^1.0.3",
     "body-parser": "~1.18.2",
     "chai": "^4.1.2",
     "cookie-parser": "~1.4.3",
@@ -26,6 +25,7 @@
     "serve-favicon": "~2.4.5",
     "should": "^13.1.3",
     "socket.io": "^2.0.4",
-    "tedious": "^2.1.5"
+    "tedious": "^2.1.5",
+    "util": "^0.10.3"
   }
 }
