--- a/angular/package.json
+++ b/angular/package.json
@@ -28,7 +28,8 @@
     "ng2-toastr": "^4.1.2",
     "q": "latest",
     "rxjs": "^5.5.2",
-    "zone.js": "^0.8.14"
+    "zone.js": "^0.8.14",
+    "socket.io-client": "latest"
   },
   "devDependencies": {
     "@angular/cli": "1.5.4",
@@ -37,6 +38,7 @@
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
+    "@types/socket.io-client": "^1.4.32",
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
