--- a/angular/src/tsconfig.spec.json
+++ b/angular/src/tsconfig.spec.json
@@ -8,7 +8,12 @@
     "types": [
       "jasmine",
       "node"
-    ]
+    ],
+    "paths": {
+      "@angular/*": [
+        "../node_modules/@angular/*"
+      ]
+    }
   },
   "files": [
     "test.ts"
