--- a/package.json
+++ b/package.json
@@ -8,13 +8,25 @@
   "dependencies": {
     "async": "^2.6.0",
     "body-parser": "~1.18.2",
+    "chai": "^4.1.2",
+    "chai-http": "^3.0.0",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.4",
     "debug": "~2.6.9",
+    "ent": "^2.2.0",
     "express": "~4.15.5",
+    "express-jwt": "^5.3.0",
+    "express-session": "^1.15.6",
+    "fs": "0.0.1-security",
+    "jsonwebtoken": "^8.1.0",
+    "mocha": "^4.0.1",
     "morgan": "~1.9.0",
     "mssql": "^4.1.0",
+    "request": "^2.83.0",
     "serve-favicon": "~2.4.5",
-    "tedious": "^2.2.0"
-  }
+    "socket.io": "^2.0.4",
+    "tedious": "^2.1.5",
+    "util": "^0.10.3"
+  },
+  "devDependencies": {}
 }
