--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "async": "^2.6.0",
+    "bcrypt": "^1.0.3",
     "body-parser": "~1.18.2",
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
@@ -25,7 +26,7 @@
     "request": "^2.83.0",
     "serve-favicon": "~2.4.5",
     "socket.io": "^2.0.4",
-    "tedious": "^2.1.5",
+    "tedious": "^2.2.0",
     "util": "^0.10.3"
   },
   "devDependencies": {}
