--- a/angular/package.json
+++ b/angular/package.json
@@ -26,6 +26,7 @@
     "angular2-jwt": "^0.2.3",
     "core-js": "^2.5.2",
     "ng2-toastr": "^4.1.2",
+    "ngx-qrcode2": "0.0.5",
     "q": "^1.5.1",
     "rxjs": "^5.5.5",
     "socket.io-client": "^2.0.4",
